--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,4 +9,9 @@
     <% end %>
   <% end %>
 </div>
+<%= simple_form_for([@list, @item]) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :description %>
+  <%= f.button :submit %>
+<% end %>
 <%= link_to "Back to all lists", lists_path %>
