Remove the 'finished' column for the item table (will do this validation with stimulus)

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,7 +2,7 @@
 <h2><%= pluralize @list.items.size, "itens" %></h2>
 <div>
   <% if @list.items.blank? %>
-    Adicione um item para a lista <%= @list.name %>
+    Adicione um item para a lista!
   <% else %>
     <% @list.items.each do |item| %>
       <p><%= item.title %> - <%= item.description %></p>
