--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,9 @@
 <h1><%= @list.name %> - <small><%= @list.author %></small></h1>
+<%= link_to "Edit list", edit_list_path %>
+<%= link_to "Delete List",
+    list_path(@list),
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+    %>
 <h2><%= pluralize @list.items.size, "itens" %></h2>
 <div>
   <% if @list.items.blank? %>
