Add cards styling, navbar and footer components, and adjust app html

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,4 +9,8 @@ $green: #1edd88;
 $gray: #0e0000;
 $light-gray: #f4f4f4;
 $champagne-pink: #f2dfd7;
-$lavender: #DDDDF8;
+$lavender: #ddddf8;
+$magnolia: #eeeefc;
+$periwinkle: #cbcbf6;
+$thistle: #d4c1ec;
+$white: #fef9ff;
