--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,16 +1,52 @@
+.mt-5{
+  margin-top: ($spacer * 6) !important;
+}
+
 .card {
   width: 100%;
   max-width: 400px;
   border-radius: 4px;
   padding: 16px;
-  background-color: $lavender;
+  margin-bottom: 16px;
+  background-color: $periwinkle;
   overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+  transition: transform 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: translate(-5px, -5px);
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  top: -16px; 
+  left: -16px; 
+  width: calc(100% + 32px);  
+  height: calc(100% + 16px);  
+  background-color: mix($periwinkle, $lavender, 30%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  z-index: -1;
+}
+
+.card:hover::before {
+  opacity: 1; 
 }
 
 .card-title {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 8px;
+}
+
+.card-author {
+  background-color: $magnolia;
+  padding: 8px;
+  border-radius: 4px;
+  font-size: 14px;
 }
 
 .card-item {
