--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,15 @@
 .navbar {
-  justify-content: space-between;
-  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: $thistle;
+  padding: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.navbar .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar .navbar-brand img {
-  width: 40px;
+.navbar-text {
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.3);
+  font-weight: bold;
 }
