--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   width: 100%;
   background-color: $thistle;
   padding: 8px;
-  box-shadow: 4px 0 8px rgba(0, 0, 0, 0.1);
+  // box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
   font-size: 18px;
   color: rgba(0, 0, 0, 0.3);
 }
@@ -17,7 +17,7 @@
 
 .footer-links a {
   color: black;
-  opacity: 0.15;
+  opacity: 0.50;
   text-decoration: none;
   font-size: 24px;
   padding: 0px 10px;
@@ -32,7 +32,8 @@
 }
 
 .footer-text {
+  opacity: 0.50;
   font-size: 18px;
-  color: rgba(0, 0, 0, 0.3);
+  color: black;
   font-weight: bold;
 }
