--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   width: 100%;
   background-color: $thistle;
   padding: 8px;
-  // box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
   font-size: 18px;
   color: rgba(0, 0, 0, 0.3);
 }
