--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
   <body>
     <%= render "shared/navbar" %>
-    <div class="container mt-5">
+    <div class="container my-5">
       <%= yield %>
     </div>
     <%= render "shared/footer" %>
