--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,13 +1,17 @@
-<%= form_with url: lists_path, method: :get, class: "d-flex" do %>
-  <%= text_field_tag :query,
+<div class="row justify-content-center">
+  <div class="col-sm-8 mb-3">
+    <%= form_with url: lists_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
         params[:query],
         class: "form-control",
         placeholder: "Type a keyword"
     %>
-  <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
-<% end %>
+      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 <% if @lists.blank? %>
-  Adicione uma lista!
+  <em>No list found. Do you want to add one?</em>
 <% else %>
   <div class="row justify-content-space-evenly">
     <% @lists.each do |list| %>
