--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,7 @@
         class: "form-control",
         placeholder: "Type a keyword"
     %>
-      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+      <%= submit_tag "Search", name: "", class: "btn btn-search" %>
     <% end %>
   </div>
 </div>
@@ -42,8 +42,8 @@
     <ul data-target="list-modal.items" class="modal-items"></ul>
   </div>
 </div> %>
-<div class="button-pencil-container">
-  <%= link_to new_list_path, class: "button-pencil" do %>
+<div class="btn-pencil-container">
+  <%= link_to new_list_path, class: "btn-pencil" do %>
     <i class="fa-regular fa-pen-to-square"></i>
   <% end %>
 </div>
