--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,6 +1,10 @@
-<%= simple_form_for(list) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :author %>
-  <%= f.button :submit %>
-<% end %>
-<%= link_to "Back to all lists", lists_path %>
+<div class="container">
+  <%= simple_form_for(list) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :author %>
+    <div class="d-flex justify-content-between align-items-center">
+      <%= link_to "Back to all lists", lists_path, class: "btn btn-primary" %>
+      <%= f.button :submit, class: "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
