--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,22 +1,30 @@
-<h1><%= @list.name %> - <small><%= @list.author %></small></h1>
-<%= link_to "Edit list", edit_list_path %>
-<%= link_to "Delete List",
-    list_path(@list),
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-    %>
-<h2><%= pluralize @list.items.size, "itens" %></h2>
-<div>
-  <% if @list.items.blank? %>
-    Adicione um item para a lista!
-  <% else %>
-    <% @list.items.each do |item| %>
-      <p><%= item.title %> - <%= item.description %></p>
+<div class="container">
+  <div class="d-flex align-items-end">
+    <h1><%= @list.name %></h1>
+    <p class="mx-2">- <%= @list.author %></p>
+  </div>
+  <div class="d-flex align-items-center">
+    <%= link_to "Edit list", edit_list_path, class: "btn btn-primary" %>
+    <%= link_to "Delete List", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-primary mx-2"%></div>
+  <div>
+    <% if @list.items.blank? %>
+      <h2>Adicione um item para a lista!</h2>
+    <% else %>
+      <% @list.items.each do |item| %>
+        <h2><%= item.title %></h2>
+        <p><%= item.description %></p>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
+  <div class="container">
+    <h2>Add a new Item!</h2>
+    <%= simple_form_for([@list, @item]) do |f| %>
+      <%= f.input :title %>
+      <%= f.input :description %>
+      <div class="d-flex justify-content-between align-items-center">
+        <%= f.button :submit, class: "btn btn-primary" %>
+        <%= link_to "Back to all lists", lists_path, class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
 </div>
-<%= simple_form_for([@list, @item]) do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.button :submit %>
-<% end %>
-<%= link_to "Back to all lists", lists_path %>
